# studiohub

./: .gitignore  README.md  StudioHub.lnk  app.py  config_manager.py  pyproject.toml  run.bat
config/: io.py  paths.py  validation.py
docs/: MIGRATION.md
hub/: dependency_container.py  main_window.py
hub_models/: index_log_model_qt.py  index_normalization.py  mockup_generator_model_qt.py  print_manager_model_qt.py
hub_views/: index_log_view_qt.py  missing_files_view_qt.py  mockup_generator_view_qt.py  print_economics_qt.py  print_manager_view_qt.py  template.py
scripts/jsx/: print_worker.jsx
services/: dashboard_metrics.py  dashboard_metrics_adapter.py  index_log_writer.py  media_session_service.py  photoshop.py  print_log_writer.py
services/index/: __init__.py
services/lifecycle/: __init__.py  startup_manager.py
services/media_worker/venv311/: pyvenv.cfg
services/navigation/: __init__.py  navigation_service.py
services/notifications/: notification_service.py
src/studiohub/: __main__.py  _legacy_main.py  codebase.txt  codebase_gen.ps1  config_manager.py  constants.py  requirements.txt
src/studiohub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
theme/: __init__.py
theme/core/: tokens.py
theme/styles/: __init__.py  app_font.py  dialogs.py  forms.py  panels.py  queue.py  typography.py  utils.py
theme/themes/: dracula.json  schema.py
theme/views/: __init__.py  settings.py
ui/: icons.py  index_row.py  panels.py
ui/delegates/: failed_icon_delegate.py
ui/dialogs/: print_failed.py
ui/sidebar/: sidebar.py  sidebar_group.py
(+174 files in other folders)
