[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "studiohub"
version = "0.1.0"
description = "StudioHub desktop application"
requires-python = ">=3.11,<3.12"
dependencies = [
    "PySide6",
    "psutil",
    "watchdog",
    "winsdk",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
